--- a/src/App.css
+++ b/src/App.css
@@ -16,17 +16,43 @@ body {
 
 .left-side {
   width: 60%;
-  background-color: #f1f1f1;
+  background-color: #000000;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.right-side {
-  padding-left: 5px;
+.right1-side {
+  padding: 20px;
   width: 40%;
-  background-color: #3d3d3d;
+  background-color: rgba(0, 0, 0, 1);
   color: #00ff00;
+  border-radius: 1%;
+  font-family: "Franklin Gothic Medium";
+}
+
+.right-side {
+  flex: 1;
+  width: 40%;
+  padding: 20px; /* Add padding for spacing */
+  background-color: rgba(0, 0, 0, 1); /* Background color for the right side */
+}
+
+.text-info-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.text-box {
+  padding: 5px;
+  margin: 5px;
+  border-radius: 10px; /* Rounded corners */
+  background-color: #181818; /* Background color for the text boxes */
+  color: #00ff00;
+  box-shadow: 3px 3px 5px #888888; /* Box shadow for depth */
+  min-width: 200px; /* Set a minimum width to prevent excessive wrapping */
+  text-align: left; /* Center text */
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
 .App-logo {
