--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,9 @@ body {
   width: 40%;
   padding: 20px; /* Add padding for spacing */
   background-color: rgba(0, 0, 0, 1); /* Background color for the right side */
+  flex: 1;
+  overflow-y: scroll;
+  height: 100vh;
 }
 
 .text-info-container {
@@ -55,13 +58,8 @@ body {
   font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.waiting-message {
+  font-size: 16px;
+  color: #ff0000;
+  font-style: italic;
 }
