--- a/src/App.css
+++ b/src/App.css
@@ -16,41 +16,26 @@ body {
 
 .left-side {
   width: 60%;
-  background-color: #000000;
+  background-color: #f1f1f1;
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
 .right-side {
-  flex: 1;
+  padding-left: 5px;
   width: 40%;
-  padding: 20px; /* Add padding for spacing */
-  background-color: rgba(0, 0, 0, 1); /* Background color for the right side */
-  flex: 1;
-  overflow-y: scroll;
-  height: 100vh;
-}
-
-.text-info-container {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.text-box {
-  padding: 5px;
-  margin: 5px;
-  border-radius: 10px; /* Rounded corners */
-  background-color: #181818; /* Background color for the text boxes */
+  background-color: #3d3d3d;
   color: #00ff00;
-  box-shadow: 3px 3px 5px #888888; /* Box shadow for depth */
-  min-width: 200px; /* Set a minimum width to prevent excessive wrapping */
-  text-align: left; /* Center text */
-  font-family: Georgia, "Times New Roman", Times, serif;
 }
 
-.waiting-message {
-  font-size: 16px;
-  color: #ff0000;
-  font-style: italic;
+.App-logo {
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
 }
